kuberenetes_practice/06-k8-ingress-controller/result-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: result-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    tls:
        - hosts:
            - "result.b15catsvsdogs.xyz"
    rules:
        - host: "result.b15catsvsdogs.xyz"
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: result
                          port:
                              number: 80
