kuberenetes_practice/06-k8-ingress-controller/vote-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vote-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    tls:
        - hosts:
            - "vote.b15catsvsdogs.xyz"
            - "www.b15catsvsdogs.xyz"
    rules:
        - host: "vote.b15catsvsdogs.xyz"
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: vote
                          port:
                              number: 80
        - host: "www.b15catsvsdogs.xyz"
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: vote
                          port:
                              number: 80
        - host: "b15catsvsdogs.xyz"
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: vote
                          port:
                              number: 80
